k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drugban
  labels:
    name: drugban
    app: drugban-api
    environment: production
